[package]
name = "ab_dashboard_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
csv = "1.1"
dotenv = "0.15.0"
hex = "0.4.3"
polars = { version = "0.16.0", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with= "1.10"
sha3 = "0.9.1"
tokio = { version = "1", features = ["full"] }
web3 = "0.17.0"
ethabi = "15"
log = "0.4.14"
env_logger = "0.9.0"
futures = "0.3.17"
rayon = "1.5.1"
